# ESP32-Dashboard

./: .gitignore  ESP32-eInk-Dashboard.ino  README.md  bambulab.cpp  fetchAllInfo.cpp  proxmox.cpp  proxmox.h
.github/workflows/: compile.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-28-dht11-ambient-widget.md  2026-06-29-pi-load-widget.md
docs/superpowers/specs/: 2026-06-28-dht11-ambient-widget-design.md  2026-06-29-pi-load-widget-design.md
firmware/: README.md  ambient.cpp  ambient.h  app.h  bambulab.h  calendar.cpp  calendar.h  configure.h  dash_zigbee.cpp  dash_zigbee.h  display.h  fetchAllInfo.cpp  fetchAllInfo.h  firmware.ino  partitions.csv  piload.cpp  piload.h  sketch.yaml
firmware/fonts/: GothamRnd_Bold_16.h  HighSpeed_130.h  ListFontConvertV4.py  MDI_22_Sparse.h  MDI_80_Sparse.h  README.md  SparseFontBase.h  epaperFont.h
googleScripts/: ESP32Dashboard_Layout.csv
pi-aggregator/: README.md  config.example.toml  layout.json  pyproject.toml
pi-aggregator/deploy/: README.md  install.sh  pi-aggregator.service
pi-aggregator/golden/: README.md  dashboard.json
pi-aggregator/pi_aggregator/: aggregator.py  app.py  config.py
pi-aggregator/pi_aggregator/sources/: claude_usage.py  layout.py  piload.py  tracking.py  weather.py
pi-aggregator/tests/: test_claude_usage.py  test_contract.py  test_piload.py  test_tracking.py  test_weather.py
